--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nanoid": "^4.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.1"
   },
